<resources>
    <string name="app_name">CityTourTravelApp</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="power_by">Power By Me</string>


    <!--Strings for the omboarding Screen -->

    <!--Titles -->>
    <string name="first_slide_title">Search your location</string>
    <string name="second_slide_title">Make a call</string>
    <string name="third_slide_title">Add missing place</string>
    <string name="four_slide_title">Sit back and enjoy</string>

    <!--Descriptions-->>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or al relate</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can performace</string>
    <string name="third_slide_desc">If you have a shop or shomethings and want to be a part of our growing industry them add your place by us</string>
    <string name="four_slide_desc">We will handle everything for you. As you have the app in your pocket then you don have to worry</string>


    <!--Buttons-->>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets get started</string>


    <!--Strings for the dashboard Screen -->
    <!--Categories-->>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Education</string>


    <!--Titles and Descriptions-->>
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_loactions_descriptions">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search</string>


    <!--Strings for the menu Screen -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rateus">Rate Us</string>
    <string name="sloganname">Everything your city holds is here!</string>




</resources>